--- a/ebb36-l.cfg
+++ b/ebb36-l.cfg
@@ -2,18 +2,26 @@
 canbus_uuid: c1573acdabf8
 
 [adxl345 head0]
-cs_pin: head0:PB1
-axes_map: y, z, x
+cs_pin: head0: PB12
+spi_software_sclk_pin: head0: PB10
+spi_software_mosi_pin: head0: PB11
+spi_software_miso_pin: head0: PB2
+axes_map: x,y,z
+
+[resonance_tester]
+accel_chip: adxl345 head0
+probe_points:
+    100, 100, 20  # an example
 
 ########################################
-# Extruder 0 (T0) - Left
+# Extruder 0 (T0) - LEFT
 ########################################
 
 [extruder]
-step_pin: head0:PB3
-dir_pin: head0:PB4
-enable_pin: !head0:PB5
-heater_pin: head0:PA6 
+step_pin: head0: PD0
+dir_pin: head0: PD1
+enable_pin: !head0: PD2
+heater_pin: head0: PB13
 rotation_distance: 22.8	#Bondtech 5mm Bore Drive Gears
 gear_ratio: 50:10 #CW2
 full_steps_per_rotation: 200		
@@ -21,17 +29,17 @@ microsteps: 16
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 sensor_type: ATC Semitec 104NT-4-R025H42G
-sensor_pin: head0:PA0
+sensor_pin: head0:PA3
 pullup_resistor: 2200
 min_temp: 5
-max_temp: 280
+max_temp: 310
 pressure_advance: 0.04
 pressure_advance_smooth_time: 0.02
-#control: pid
+control: pid
 max_power: 1.0
-#pid_Kp: 26.952
-#pid_Ki: 1.321
-#pid_Kd: 137.458
+pid_Kp: 26.952
+pid_Ki: 1.321
+pid_Kd: 137.458
 max_extrude_only_distance: 220
 
 [tmc2209 extruder]
@@ -41,33 +49,24 @@ interpolate: False
 run_current: 0.5
 stealthchop_threshold: 0
 
-[heater_fan extruder_fan]
-pin: head0:PA7  # "FAN1"
+[heater_fan extruder0_fan]
+pin: head0: PA1
 heater: extruder
 heater_temp: 50.0
 fan_speed: 1.0
 
 [fan_generic fanX1]
-pin: head0:PA8
+pin: head0:PA0
 cycle_time: 0.0100
 kick_start_time: 1.00
 hardware_pwm: false
 
+[neopixel hotend0_rgb]
+pin: head0: PD3
+chain_count: 2
+initial_RED: 1.0
+initial_GREEN: 1.0
+initial_BLUE: 0.8
 
-[neopixel sb_leds_T0]
-pin: head0:PA13
-#   The pin connected to the neopixel. This parameter must be provided.
-chain_count: 3
-#   The number of Neopixel chips that are "daisy chained" to the
-#   provided pin. The default is 1 (which indicates only a single
-#   Neopixel is connected to the pin).
-color_order: GRBW
-#   Set the pixel order required by the LED hardware. Options are GRB,
-#   RGB, GRBW, or RGBW. The default is GRB.
-initial_RED: 1
-initial_GREEN: 1
-initial_BLUE: 1
-initial_WHITE: 1.0
-#   Sets the initial LED color of the Neopixel. Each value should be
-#   between 0.0 and 1.0. The WHITE option is only available on RGBW
-#   LEDs. The default for each color is 0.#
+[filament_switch_sensor my_sensor]
+switch_pin: ^head0:PB6
