--- a/fly-d7.cfg
+++ b/fly-d7.cfg
@@ -12,7 +12,7 @@ dir_pin: !PC13
 enable_pin: !PC15
 microsteps: 32
 rotation_distance: 40
-endstop_pin: !head0:PA14
+endstop_pin: !head0:PB5
 position_endstop: -50
 position_min: -52
 position_max: 228
@@ -34,7 +34,7 @@ dir_pin: !PA0
 enable_pin: !PA2
 microsteps: 32
 rotation_distance: 40
-endstop_pin: !head1:PA14
+endstop_pin: !head1:PB5
 position_endstop: 22.4
 position_min: 22
 position_max: 300
@@ -59,7 +59,7 @@ dir_pin: !PA4
 enable_pin: !PA6
 microsteps: 32
 rotation_distance: 40
-endstop_pin:  ^PA9
+endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: 255
 position_max: 255
 position_min: -5
@@ -69,6 +69,7 @@ homing_retract_dist: 5
 [tmc2209 stepper_y]
 # Socket Z
 uart_pin: PA3
+diag_pin: ^PA9
 run_current: 0.8
 stealthchop_threshold: 0
 
@@ -79,11 +80,12 @@ dir_pin: PC4
 enable_pin: !PB0
 microsteps: 32
 rotation_distance: 40
-endstop_pin: ^PB4 #^PA2 #y-max tmc2209_stepper_y1:virtual_endstop
+endstop_pin: tmc2209_stepper_y1:virtual_endstop
 
 [tmc2209 stepper_y1]
 # Socket E0
 uart_pin: PA7
+diag_pin: ^PB4
 run_current: 0.8
 stealthchop_threshold: 0
 
@@ -96,7 +98,7 @@ stealthchop_threshold: 0
 ##	This probe is not used for Z height, only Quad Gantry Leveling
 ##	Connected to Probe Pins
 ##	If your probe is NO instead of NC, change pin to !PA3
-pin: head0:PB12
+pin: PA8
 z_offset: 6.1
 x_offset: 0 
 y_offset: 21
@@ -113,8 +115,7 @@ dir_pin: PB2
 enable_pin: !PB11
 microsteps: 32
 rotation_distance: 4
-endstop_pin: PB4
-position_endstop: 0.00
+endstop_pin: probe:z_virtual_endstop
 position_max: 250
 position_min: -3
 
@@ -153,17 +154,17 @@ run_current: 0.8
 # Bed
 ########################################
 
-[heater_bed]
-##	LED-B Output
-heater_pin: PC7
-sensor_type: Generic 3950
-sensor_pin: PC0
-##	Adjust Max Power so your heater doesn't warp your bed
-##	Target 0.4 W/cm^2
-max_power: 1
-min_temp: 0
-max_temp: 120
-pwm_cycle_time: 0.016
+#[heater_bed]
+###	LED-B Output
+#heater_pin: PC7
+#sensor_type: Generic 3950
+#sensor_pin: PC0
+###	Adjust Max Power so your heater doesn't warp your bed
+###	Target 0.4 W/cm^2
+#max_power: 1
+#min_temp: 0
+#max_temp: 120
+#pwm_cycle_time: 0.016
 #control: pid
 #pid_kp: 58.437
 #pid_ki: 2.347
@@ -177,7 +178,7 @@ pwm_cycle_time: 0.016
 ##	R Channel - PB6
 ##	G Channel - PB5
 ##	B Channel - PB7
-pin: PC6
+pin: PC9
 pwm: true
 cycle_time: 0.01
 value: 100
