--- a/fly-d7.cfg
+++ b/fly-d7.cfg
@@ -8,36 +8,36 @@ canbus_uuid: 98c026104de0
 [stepper_x] 
 # Socket X
 step_pin: PC14
-dir_pin: !PC13
+dir_pin: PC13
 enable_pin: !PC15
 microsteps: 32
 rotation_distance: 40
 endstop_pin: !head0:PB5
-position_endstop: -50
-position_min: -52
-position_max: 228
+position_endstop: -30.5
+position_min: -30.5
+position_max: 328.5
 homing_speed: 60
 homing_retract_dist: 5
 second_homing_speed: 10
 
-[tmc2209 stepper_x]
+[tmc2209 stepper_x] 
 # Socket X
 uart_pin: PB7
-run_current: 0.8
+run_current: 1.2
 stealthchop_threshold: 0
 
 [dual_carriage]
-# Socket Y
 axis: x
+# Socket Y
 step_pin: PA1
-dir_pin: !PA0
+dir_pin: PA0
 enable_pin: !PA2
 microsteps: 32
 rotation_distance: 40
 endstop_pin: !head1:PB5
-position_endstop: 22.4
-position_min: 22
-position_max: 300
+position_endstop: 31.5
+position_min: 31.5
+position_max: 390.5
 homing_speed: 60
 homing_retract_dist: 5
 second_homing_speed: 10
@@ -45,7 +45,7 @@ second_homing_speed: 10
 [tmc2209 dual_carriage]
 # Socket Y
 uart_pin: PC3
-run_current: 0.8
+run_current: 1.2
 stealthchop_threshold: 0
 
 ########################################
@@ -55,28 +55,29 @@ stealthchop_threshold: 0
 [stepper_y]
 # Socket Z
 step_pin: PA5
-dir_pin: !PA4
+dir_pin: PA4
 enable_pin: !PA6
 microsteps: 32
 rotation_distance: 40
 endstop_pin: tmc2209_stepper_y:virtual_endstop
-position_endstop: 255
-position_max: 255
-position_min: -5
+position_endstop: 352
+position_max: 352
+position_min: 0
 homing_speed: 40
-homing_retract_dist: 5
+#homing_retract_dist: 5
 
 [tmc2209 stepper_y]
 # Socket Z
 uart_pin: PA3
 diag_pin: ^PA9
-run_current: 0.8
+driver_SGTHRS: 60
+run_current: 1.2
 stealthchop_threshold: 0
 
 [stepper_y1]
 # Socket E0
 step_pin: PC5
-dir_pin: PC4
+dir_pin: !PC4
 enable_pin: !PB0
 microsteps: 32
 rotation_distance: 40
@@ -86,7 +87,8 @@ endstop_pin: tmc2209_stepper_y1:virtual_endstop
 # Socket E0
 uart_pin: PA7
 diag_pin: ^PB4
-run_current: 0.8
+driver_SGTHRS: 60
+run_current: 1.2
 stealthchop_threshold: 0
 
 ########################################
@@ -175,9 +177,6 @@ run_current: 0.8
 ########################################
 
 [output_pin caselight]
-##	R Channel - PB6
-##	G Channel - PB5
-##	B Channel - PB7
 pin: PC9
 pwm: true
 cycle_time: 0.01
