--- a/printer.cfg
+++ b/printer.cfg
@@ -8,22 +8,41 @@ on_error_gcode: CANCEL_PRINT
 kinematics: hybrid_corexy
 max_velocity: 300
 max_accel: 10000
-max_accel_to_decel: 10000
 max_z_velocity: 10
 max_z_accel: 30
 
-#need to be on Klipper Pull Request #5311 to use Input Shaper
-#[input_shaper]
-#shaper_freq_x: 53
-#shaper_type_x: mzv
-#shaper_freq_dc: 53 
-#shaper_type_dc: mzv
-#shaper_freq_y: 40
-#shaper_type_y: zv
+[temperature_sensor Host]
+sensor_type: temperature_host
+
+[temperature_sensor Control-board]
+sensor_type: temperature_mcu
+#sensor_mcu: mcu
+
+[temperature_sensor Toolhead-board]
+sensor_type: temperature_mcu
+sensor_mcu: head0
+
+[temperature_sensor Toolhead-board]
+sensor_type: temperature_mcu
+sensor_mcu: head1
 
 [include fly-d7.cfg]
 [include ebb36-l.cfg]
 [include ebb36-r.cfg]
+[include idex-macros.cfg]
 
+[exclude_object]
+[pause_resume]
+[respond]
+[save_variables]
+filename: ~/printer_data/config/variables.cfg
 [force_move]
 enable_force_move:true
+[delayed_gcode]
+gcode:
+  SET_LED LED=hotend0_rgb RED=1 GREEN=0 BLUE=0 INDEX=0 TRANSMIT=0
+  SET_LED LED=hotend0_rgb RED=1 GREEN=1 BLUE=1 INDEX=1 TRANSMIT=0
+  SET_LED LED=hotend0_rgb RED=1 GREEN=1 BLUE=1 INDEX=2
+  SET_LED LED=hotend1_rgb RED=0 GREEN=1 BLUE=0 INDEX=0 TRANSMIT=0
+  SET_LED LED=hotend1_rgb RED=1 GREEN=1 BLUE=1 INDEX=1 TRANSMIT=0
+  SET_LED LED=hotend1_rgb RED=1 GREEN=1 BLUE=1 INDEX=2
