--- a/ebb36-l.cfg
+++ b/ebb36-l.cfg
@@ -50,13 +50,13 @@ run_current: 0.5
 stealthchop_threshold: 0
 
 [heater_fan extruder0_fan]
-pin: head0: PA1
+pin: head0: PA0
 heater: extruder
 heater_temp: 50.0
 fan_speed: 1.0
 
 [fan_generic fanX1]
-pin: head0:PA0
+pin: head0:PA1
 cycle_time: 0.0100
 kick_start_time: 1.00
 hardware_pwm: false
@@ -68,5 +68,5 @@ initial_RED: 1.0
 initial_GREEN: 1.0
 initial_BLUE: 0.8
 
-[filament_switch_sensor my_sensor]
-switch_pin: ^head0:PB6
+[filament_switch_sensor extruder0_filament]
+switch_pin: ^!head0:PB6
