--- a/ebb36-l.cfg
+++ b/ebb36-l.cfg
@@ -55,7 +55,7 @@ heater: extruder
 heater_temp: 50.0
 fan_speed: 1.0
 
-[fan_generic fanX1]
+[fan_generic part_fan_extruder]
 pin: head0:PA1
 cycle_time: 0.0100
 kick_start_time: 1.00
@@ -63,7 +63,7 @@ hardware_pwm: false
 
 [neopixel hotend0_rgb]
 pin: head0: PD3
-chain_count: 2
+chain_count: 3
 initial_RED: 1.0
 initial_GREEN: 1.0
 initial_BLUE: 0.8
