--- a/ebb36-r.cfg
+++ b/ebb36-r.cfg
@@ -55,7 +55,7 @@ heater: extruder
 heater_temp: 50.0
 fan_speed: 1.0
 
-[fan_generic fanX2]
+[fan_generic part_fan_extruder1]
 pin: head1:PA1
 cycle_time: 0.0100
 kick_start_time: 1.00
@@ -63,7 +63,7 @@ hardware_pwm: false
 
 [neopixel hotend1_rgb]
 pin: head1: PD3
-chain_count: 2
+chain_count: 3
 initial_RED: 1.0
 initial_GREEN: 1.0
 initial_BLUE: 0.8
