--- a/jschuh-macros.cfg
+++ b/jschuh-macros.cfg
@@ -78,4 +78,51 @@ variable_travel_speed_xy: 12000
 variable_travel_speed_z: 1200
 gcode: 
 
+[gcode_macro M106]
+gcode:
+    {% if params.P is defined %}
+      {% if params.S is defined %}
+      {% set activetool = params.P|default(0)|int %}
+
+       {% if activetool == 0 %}
+        SET_PIN PIN=part_fan_extruder VALUE={params.S|int}
+       {% else %}
+        SET_PIN PIN=part_fan_extruder{params.P|int} VALUE={params.S|int}
+       {% endif %}
+
+      {% else %}
+       {% if activetool == 0 %}
+        SET_PIN PIN=part_fan_extruder VALUE=255
+       {% else %}
+        SET_PIN PIN=part_fan_extruder{params.P|int} VALUE=255
+       {% endif %}  
+      {% endif %}
+
+    {% else %}
+      {% if params.S is defined %}
+       {% if activetool == 0 %}
+        SET_PIN PIN=part_fan_extruder VALUE={params.S|int}
+       {% else %}
+        SET_PIN PIN=part_fan_{printer.toolhead.extruder} VALUE={params.S|int}
+       {% endif %}
+      {% else %}
+       {% if activetool == 0 %}
+        SET_PIN PIN=part_fan_extruder VALUE=255
+       {% else %}
+        SET_PIN PIN=part_fan_{printer.toolhead.extruder} VALUE=255        
+       {% endif %}
+      {% endif %}
+    {% endif %}
+
+    
+[gcode_macro M190]
+gcode:
+    
+[gcode_macro M140]
+gcode:
+
+[idle_timeout]
+gcode:
+  _KM_IDLE_TIMEOUT # This line must be in your idle_timeout section.
+
 [include jschuh-macros/*.cfg]
