--- a/printer.cfg
+++ b/printer.cfg
@@ -18,11 +18,11 @@ sensor_type: temperature_host
 sensor_type: temperature_mcu
 #sensor_mcu: mcu
 
-[temperature_sensor Toolhead-board]
+[temperature_sensor Toolhead-board-L]
 sensor_type: temperature_mcu
 sensor_mcu: head0
 
-[temperature_sensor Toolhead-board]
+[temperature_sensor Toolhead-board-R]
 sensor_type: temperature_mcu
 sensor_mcu: head1
 
@@ -30,6 +30,7 @@ sensor_mcu: head1
 [include ebb36-l.cfg]
 [include ebb36-r.cfg]
 [include idex-macros.cfg]
+#[include jschuh-macros.cfg]
 
 [exclude_object]
 [pause_resume]
@@ -38,11 +39,13 @@ sensor_mcu: head1
 filename: ~/printer_data/config/variables.cfg
 [force_move]
 enable_force_move:true
-[delayed_gcode]
+
+[delayed_gcode _moron_led_setup]
+initial_duration: 1
 gcode:
-  SET_LED LED=hotend0_rgb RED=1 GREEN=0 BLUE=0 INDEX=0 TRANSMIT=0
-  SET_LED LED=hotend0_rgb RED=1 GREEN=1 BLUE=1 INDEX=1 TRANSMIT=0
-  SET_LED LED=hotend0_rgb RED=1 GREEN=1 BLUE=1 INDEX=2
-  SET_LED LED=hotend1_rgb RED=0 GREEN=1 BLUE=0 INDEX=0 TRANSMIT=0
-  SET_LED LED=hotend1_rgb RED=1 GREEN=1 BLUE=1 INDEX=1 TRANSMIT=0
-  SET_LED LED=hotend1_rgb RED=1 GREEN=1 BLUE=1 INDEX=2
+  SET_LED LED=hotend0_rgb RED=0.1 GREEN=0 BLUE=0 INDEX=1 TRANSMIT=0
+  SET_LED LED=hotend0_rgb RED=1 GREEN=1 BLUE=1 INDEX=2 TRANSMIT=0
+  SET_LED LED=hotend0_rgb RED=1 GREEN=1 BLUE=1 INDEX=3
+  SET_LED LED=hotend1_rgb RED=0 GREEN=0.1 BLUE=0 INDEX=1 TRANSMIT=0
+  SET_LED LED=hotend1_rgb RED=1 GREEN=1 BLUE=1 INDEX=2 TRANSMIT=0
+  SET_LED LED=hotend1_rgb RED=1 GREEN=1 BLUE=1 INDEX=3
