--- a/idex-macros.cfg
+++ b/idex-macros.cfg
@@ -20,14 +20,14 @@ gcode:
 gcode:
     SAVE_GCODE_STATE NAME=park0
     G90
-    G1 X-30.5
+    G1 X-30.5 F12000
     RESTORE_GCODE_STATE NAME=park0
     
 [gcode_macro PARK_extruder1]
 gcode:
     SAVE_GCODE_STATE NAME=park1
     G90
-    G1 X390.5
+    G1 X390.5 F12000
     RESTORE_GCODE_STATE NAME=park1
 
 ###### TOOL SELECTION ######
@@ -37,15 +37,28 @@ gcode:
     PARK_{printer.toolhead.extruder}
     ACTIVATE_EXTRUDER EXTRUDER=extruder
     SET_DUAL_CARRIAGE CARRIAGE=0
-    SET_GCODE_OFFSET Y=0
     
 [gcode_macro T1]
 gcode:
     PARK_{printer.toolhead.extruder}
     ACTIVATE_EXTRUDER EXTRUDER=extruder1
     SET_DUAL_CARRIAGE CARRIAGE=1
-    SET_GCODE_OFFSET Y=0
 
+
+
+[homing_override]
+axes: xy
+gcode:
+    IDEX_HOME_X
+    G90
+    G1 X100 F12000
+    ACTIVATE_EXTRUDER EXTRUDER=extruder1
+    SET_DUAL_CARRIAGE CARRIAGE=1
+    G90
+    G1 X250 F12000
+    IDEX_HOME_Y
+    T0
+    PARK_extruder
 
 
 [z_tilt]
@@ -57,8 +70,8 @@ z_positions:
 	386, -25
 points:
 	30,30
-	125,220
-	220,30
+	175,320
+	320,30
 speed: 150
 horizontal_move_z: 10
 retries: 5
