add display and stuff

--- a/ebb36-r.cfg
+++ b/ebb36-r.cfg
@@ -29,6 +29,8 @@ microsteps: 16
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 sensor_type: ATC Semitec 104NT-4-R025H42G
+# sensor_type: Generic 3950
+# sensor_type: NTC 100K MGB18-104F39050L32
 sensor_pin: head1:PA3
 pullup_resistor: 2200
 min_temp: 5
