--- a/idex-macros.cfg
+++ b/idex-macros.cfg
@@ -4,13 +4,13 @@
 
 [gcode_macro IDEX_HOME_Y]
 gcode:
-    G28 Y0
+    G28 Y
     G90
-    G1 Y175 F12000
+    G1 Y175 F36000
 
 [gcode_macro IDEX_HOME_X]
 gcode:
-    G28 X0 
+    G28 X 
     T1 
     T0
 
@@ -20,14 +20,14 @@ gcode:
 gcode:
     SAVE_GCODE_STATE NAME=park0
     G90
-    G1 X-30.5 F12000
+    G1 X-30.5 F36000
     RESTORE_GCODE_STATE NAME=park0
     
 [gcode_macro PARK_extruder1]
 gcode:
     SAVE_GCODE_STATE NAME=park1
     G90
-    G1 X390.5 F12000
+    G1 X390.5 F36000
     RESTORE_GCODE_STATE NAME=park1
 
 ###### TOOL SELECTION ######
@@ -47,18 +47,29 @@ gcode:
 
 
 [homing_override]
-axes: xy
+axes: xyz
 gcode:
+    G1 F36000
     IDEX_HOME_X
     G90
-    G1 X100 F12000
+    G1 X100
     ACTIVATE_EXTRUDER EXTRUDER=extruder1
     SET_DUAL_CARRIAGE CARRIAGE=1
     G90
-    G1 X250 F12000
+    G1 X250
     IDEX_HOME_Y
-    T0
-    PARK_extruder
+    ACTIVATE_EXTRUDER EXTRUDER=extruder
+    SET_DUAL_CARRIAGE CARRIAGE=0
+    G1 X0
+    ACTIVATE_EXTRUDER EXTRUDER=extruder1
+    SET_DUAL_CARRIAGE CARRIAGE=1
+    G1 X65
+    ACTIVATE_EXTRUDER EXTRUDER=extruder
+    SET_DUAL_CARRIAGE CARRIAGE=0
+    IDEX_HOME_X
+    G1 X175 Y175
+    G28 Z
+    PARK_EXTRUDER
 
 
 [z_tilt]
@@ -73,6 +84,13 @@ points:
 	175,320
 	320,30
 speed: 150
-horizontal_move_z: 10
+horizontal_move_z: 20
 retries: 5
-retry_tolerance: 0.01
+retry_tolerance: 0.1
+
+#[safe_z_home]
+#home_xy_position: 175, 175
+#speed: 50.0
+#z_hop: 5
+#z_hop_speed: 15.0
+#move_to_previous: True
