--- a/moonraker.conf
+++ b/moonraker.conf
@@ -29,7 +29,7 @@ channel: stable
 type: web
 persistent_files:
     config.json
-
+    
 [update_manager mainsail-config]
 managed_services: klipper
 origin: https://github.com/mainsail-crew/mainsail-config.git
@@ -44,3 +44,11 @@ path: ~/crowsnest
 origin: https://github.com/mainsail-crew/crowsnest.git
 managed_services: crowsnest
 install_script: tools/pkglist.sh
+
+[update_manager fluidd]
+path: /home/moron/fluidd
+repo: fluidd-core/fluidd
+channel: stable
+type: web
+persistent_files:
+    config.json
