--- a/printer.cfg
+++ b/printer.cfg
@@ -6,7 +6,7 @@ on_error_gcode: CANCEL_PRINT
 
 [printer]
 kinematics: hybrid_corexy
-max_velocity: 300
+max_velocity: 600
 max_accel: 10000
 max_z_velocity: 10
 max_z_accel: 30
@@ -31,6 +31,8 @@ sensor_mcu: head1
 [include ebb36-r.cfg]
 [include idex-macros.cfg]
 #[include jschuh-macros.cfg]
+[include display.cfg]
+
 
 [exclude_object]
 [pause_resume]
@@ -40,10 +42,10 @@ filename: ~/printer_data/config/variables.cfg
 [force_move]
 enable_force_move:true
 
-[delayed_gcode _moron_led_setup]
+[delayed_gcode _moron_toolhead_led_setup]
 initial_duration: 1
 gcode:
-  SET_LED LED=hotend0_rgb RED=0.1 GREEN=0 BLUE=0 INDEX=1 TRANSMIT=0
+  SET_LED LED=hotend0_rgb RED=0.1 GREEN=0.1 BLUE=0 INDEX=1 TRANSMIT=0
   SET_LED LED=hotend0_rgb RED=1 GREEN=1 BLUE=1 INDEX=2 TRANSMIT=0
   SET_LED LED=hotend0_rgb RED=1 GREEN=1 BLUE=1 INDEX=3
   SET_LED LED=hotend1_rgb RED=0 GREEN=0.1 BLUE=0 INDEX=1 TRANSMIT=0
