--- a/fly-d7.cfg
+++ b/fly-d7.cfg
@@ -100,10 +100,10 @@ stealthchop_threshold: 0
 ##	This probe is not used for Z height, only Quad Gantry Leveling
 ##	Connected to Probe Pins
 ##	If your probe is NO instead of NC, change pin to !PA3
-pin: PA8
-z_offset: 6.1
+pin: !PA8
+z_offset: 0
 x_offset: 0 
-y_offset: 21
+y_offset: 0
 speed: 5
 samples: 3
 samples_tolerance: 0.006
@@ -115,10 +115,10 @@ samples_tolerance_retries: 5
 step_pin: PB10
 dir_pin: PB2
 enable_pin: !PB11
-microsteps: 32
+microsteps: 16
 rotation_distance: 4
 endstop_pin: probe:z_virtual_endstop
-position_max: 250
+position_max: 370
 position_min: -3
 
 [tmc2209 stepper_z]
@@ -131,7 +131,7 @@ run_current: 0.8
 step_pin: PC12
 dir_pin: PB5
 enable_pin: !PC11
-microsteps: 32
+microsteps: 16
 rotation_distance: 4
 
 [tmc2209 stepper_z1]
@@ -144,7 +144,7 @@ run_current: 0.8
 step_pin: PA15
 dir_pin: PA14
 enable_pin: !PA13
-microsteps: 32
+microsteps: 16
 rotation_distance: 4
 
 [tmc2209 stepper_z2]
@@ -156,21 +156,21 @@ run_current: 0.8
 # Bed
 ########################################
 
-#[heater_bed]
-###	LED-B Output
-#heater_pin: PC7
-#sensor_type: Generic 3950
-#sensor_pin: PC0
-###	Adjust Max Power so your heater doesn't warp your bed
-###	Target 0.4 W/cm^2
-#max_power: 1
-#min_temp: 0
-#max_temp: 120
-#pwm_cycle_time: 0.016
-#control: pid
-#pid_kp: 58.437
-#pid_ki: 2.347
-#pid_kd: 363.769
+[heater_bed]
+##	LED-B Output
+heater_pin: PC7
+sensor_type: Generic 3950
+sensor_pin: PC0
+##	Adjust Max Power so your heater doesn't warp your bed
+##	Target 0.4 W/cm^2
+max_power: 1
+min_temp: 0
+max_temp: 120
+pwm_cycle_time: 0.016
+control: pid
+pid_kp: 58.437
+pid_ki: 2.347
+pid_kd: 363.769
 
 ########################################
 # Sensors and Extras
