--- a/fly-d7.cfg
+++ b/fly-d7.cfg
@@ -95,26 +95,26 @@ stealthchop_threshold: 0
 # Z Steppers
 ########################################
 
-[probe]
+# [probe]
 ##	Inductive Probe - Connected to Z MAX
 ##	This probe is not used for Z height, only Quad Gantry Leveling
 ##	Connected to Probe Pins
 ##	If your probe is NO instead of NC, change pin to !PA3
-pin: !PA8
-z_offset: 0
-x_offset: 0 
-y_offset: 0
-speed: 5
-samples: 3
-samples_tolerance: 0.006
-samples_result: median
-samples_tolerance_retries: 5
+# pin: !PA8
+# z_offset: 0
+# x_offset: 0 
+# y_offset: 0
+# speed: 5
+# samples: 3
+# samples_tolerance: 0.006
+# samples_result: median
+# samples_tolerance_retries: 5
 
 [stepper_z]
-#Socket E1
-step_pin: PB10
-dir_pin: PB2
-enable_pin: !PB11
+#Socket E3
+step_pin: PA15
+dir_pin: PA14
+enable_pin: !PA13
 microsteps: 16
 rotation_distance: 4
 endstop_pin: probe:z_virtual_endstop
@@ -122,8 +122,8 @@ position_max: 370
 position_min: -3
 
 [tmc2209 stepper_z]
-# Socket E1
-uart_pin: PB1
+# Socket E3
+uart_pin: PC10
 run_current: 0.8
 
 [stepper_z1]
@@ -140,16 +140,16 @@ uart_pin: PB6
 run_current: 0.8
 
 [stepper_z2]
-#Socket E3
-step_pin: PA15
-dir_pin: PA14
-enable_pin: !PA13
+#Socket E1
+step_pin: PB10
+dir_pin: PB2
+enable_pin: !PB11
 microsteps: 16
 rotation_distance: 4
 
 [tmc2209 stepper_z2]
-# Socket E3
-uart_pin: PC10
+# Socket E1
+uart_pin: PB1
 run_current: 0.8
 
 ########################################
@@ -168,9 +168,9 @@ min_temp: 0
 max_temp: 120
 pwm_cycle_time: 0.016
 control: pid
-pid_kp: 58.437
-pid_ki: 2.347
-pid_kd: 363.769
+pid_Kp: 58.094 
+pid_Ki: 1.424 
+pid_Kd: 592.561
 
 ########################################
 # Sensors and Extras
