--- a/printer.cfg
+++ b/printer.cfg
@@ -6,10 +6,10 @@ on_error_gcode: CANCEL_PRINT
 
 [printer]
 kinematics: hybrid_corexy
-max_velocity: 600
+max_velocity: 400
 max_accel: 10000
-max_z_velocity: 10
-max_z_accel: 30
+max_z_velocity: 50
+max_z_accel: 50
 
 [temperature_sensor Host]
 sensor_type: temperature_host
@@ -26,12 +26,38 @@ sensor_mcu: head0
 sensor_type: temperature_mcu
 sensor_mcu: head1
 
+
+[z_tilt]
+z_positions:
+	-36, -25
+	175, 373	
+	386, -25
+points:
+	30,30
+	175,300
+	320,30
+speed: 150
+horizontal_move_z: 20
+retries: 5
+retry_tolerance: 0.1
+
+[safe_z_home]
+home_xy_position: 175, 175
+speed: 50.0
+z_hop: 5
+z_hop_speed: 15.0
+move_to_previous: True
+
 [include fly-d7.cfg]
 [include ebb36-l.cfg]
 [include ebb36-r.cfg]
 [include idex-macros.cfg]
-#[include jschuh-macros.cfg]
-[include display.cfg]
+
+[include jschuh-macros.cfg]
+
+[include lcd_menu_settings.cfg]
+# [include display.nano.cfg]
+[include display.mks.cfg]
 
 
 [exclude_object]
@@ -41,6 +67,11 @@ sensor_mcu: head1
 filename: ~/printer_data/config/variables.cfg
 [force_move]
 enable_force_move:true
+[bed_mesh]
+mesh_min: 30, 30
+mesh_max: 320, 320
+probe_count: 6, 6
+[input_shaper]
 
 [delayed_gcode _moron_toolhead_led_setup]
 initial_duration: 1
@@ -51,3 +82,26 @@ gcode:
   SET_LED LED=hotend1_rgb RED=0 GREEN=0.1 BLUE=0 INDEX=1 TRANSMIT=0
   SET_LED LED=hotend1_rgb RED=1 GREEN=1 BLUE=1 INDEX=2 TRANSMIT=0
   SET_LED LED=hotend1_rgb RED=1 GREEN=1 BLUE=1 INDEX=3
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	  0.008750, -0.048750, -0.058750, -0.083750, -0.073750, -0.028750
+#*# 	  -0.031250, -0.052500, -0.040000, -0.021250, 0.018750, 0.053750
+#*# 	  -0.107500, -0.105000, -0.053750, -0.011250, 0.050000, 0.117500
+#*# 	  -0.152500, -0.122500, -0.046250, 0.021250, 0.107500, 0.188750
+#*# 	  -0.213750, -0.153750, -0.053750, 0.028750, 0.137500, 0.241250
+#*# 	  -0.283750, -0.202500, -0.083750, 0.020000, 0.146250, 0.271250
+#*# x_count = 6
+#*# y_count = 6
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 2
+#*# algo = lagrange
+#*# tension = 0.2
+#*# min_x = 30.0
+#*# max_x = 320.0
+#*# min_y = 30.0
+#*# max_y = 320.0
