--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "jschuh-macros"]
-	path = jschuh-macros
-	url = git@github.com:jschuh/klipper-macros.git
+[submodule "lcd_menu"]
+	path = lcd_menu
+	url = https://github.com/dasburninator/klipper_lcd_menu.git
