--- a/ebb36-r.cfg
+++ b/ebb36-r.cfg
@@ -19,7 +19,7 @@ probe_points:
 
 [extruder1]
 step_pin: head1: PD0
-dir_pin: head1: PD1
+dir_pin: !head1: PD1
 enable_pin: !head1: PD2
 heater_pin: head1: PB13
 rotation_distance: 22.8	#Bondtech 5mm Bore Drive Gears
@@ -39,14 +39,13 @@ pressure_advance: 0.04
 pressure_advance_smooth_time: 0.02
 control: pid
 max_power: 1.0
-pid_Kp: 26.952
-pid_Ki: 1.321
-pid_Kd: 137.458
+pid_Kp: 20.100
+pid_Ki: 1.595
+pid_Kd: 63.315
 max_extrude_only_distance: 220
 
 [tmc2209 extruder1]
-uart_pin: head1:PA10
-tx_pin: head1:PA9
+uart_pin: head1:PA15
 interpolate: False
 run_current: 0.5
 stealthchop_threshold: 0
@@ -72,3 +71,11 @@ initial_BLUE: 0.8
 
 [filament_switch_sensor extruder1_filament]
 switch_pin: ^!head1:PB6
+
+# [probe]
+# pin: head1: PB9
+# x_offset: -3
+# y_offset: 21
+# z_offset: 1
+
+
