--- a/idex-macros.cfg
+++ b/idex-macros.cfg
@@ -14,6 +14,11 @@ gcode:
     T1 
     T0
 
+[gcode_macro IDEX_HOME_Z]
+gcode: 
+    G1 X175Y175 F36000
+    G28 Z
+
 ###### PARK ######
 
 [gcode_macro PARK_extruder]
@@ -46,51 +51,42 @@ gcode:
 
 
 
-[homing_override]
-axes: xyz
-gcode:
-    G1 F36000
-    IDEX_HOME_X
-    G90
-    G1 X100
-    ACTIVATE_EXTRUDER EXTRUDER=extruder1
-    SET_DUAL_CARRIAGE CARRIAGE=1
-    G90
-    G1 X250
-    IDEX_HOME_Y
-    ACTIVATE_EXTRUDER EXTRUDER=extruder
-    SET_DUAL_CARRIAGE CARRIAGE=0
-    G1 X0
-    ACTIVATE_EXTRUDER EXTRUDER=extruder1
-    SET_DUAL_CARRIAGE CARRIAGE=1
-    G1 X65
-    ACTIVATE_EXTRUDER EXTRUDER=extruder
-    SET_DUAL_CARRIAGE CARRIAGE=0
-    IDEX_HOME_X
-    G1 X175 Y175
-    G28 Z
-    PARK_EXTRUDER
+# [homing_override]
+# axes: xyz
+# gcode:
+#     G90
+#     {% if "z" not in printer.toolhead.homed_axes %}
+#       SET_KINEMATIC_POSITION Z=0
+#     {% endif %}
+#     G0 Z20 F10000
+#     G1 F36000
+    
+#     {% if "x" not in printer.toolhead.homed_axes %}
+#       IDEX_HOME_X
+#     {% endif %}
+#     G90
+    
+#     {% if "y" not in printer.toolhead.homed_axes %}
+#       G1 X100
+#       ACTIVATE_EXTRUDER EXTRUDER=extruder1
+#       SET_DUAL_CARRIAGE CARRIAGE=1
+#       G90
+#       G1 X250
+#       IDEX_HOME_Y
+#       ACTIVATE_EXTRUDER EXTRUDER=extruder
+#       SET_DUAL_CARRIAGE CARRIAGE=0
+#       G1 X0
+#       ACTIVATE_EXTRUDER EXTRUDER=extruder1
+#       SET_DUAL_CARRIAGE CARRIAGE=1
+#       G1 X65
+#       ACTIVATE_EXTRUDER EXTRUDER=extruder
+#       SET_DUAL_CARRIAGE CARRIAGE=0
+#       IDEX_HOME_X
+#     {% endif %}
+    
+#     ACTIVATE_EXTRUDER EXTRUDER=extruder
+#     SET_DUAL_CARRIAGE CARRIAGE=0
+#     IDEX_HOME_Z
+#     PARK_EXTRUDER
 
 
-[z_tilt]
-##	Use Z_TILT_ADJUST to level the bed left to right.
-##	z_positions: Location of toolhead
-z_positions:
-	-36, -25
-	175, 373	
-	386, -25
-points:
-	30,30
-	175,320
-	320,30
-speed: 150
-horizontal_move_z: 20
-retries: 5
-retry_tolerance: 0.1
-
-#[safe_z_home]
-#home_xy_position: 175, 175
-#speed: 50.0
-#z_hop: 5
-#z_hop_speed: 15.0
-#move_to_previous: True
