git modules update

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/dasburninator/klipper_lcd_menu.git
 [submodule "jschuh-macros"]
 	path = jschuh-macros
-	url = https://rOzzy1987/klipper-macros
+	url = https://github.com/rOzzy1987/klipper-macros.git
