--- a/fly-d7.cfg
+++ b/fly-d7.cfg
@@ -178,8 +178,10 @@ pid_Kd: 592.561
 
 [output_pin caselight]
 pin: PC9
+# value: 1
 pwm: true
-cycle_time: 0.01
+hardware_pwm: true
+cycle_time: 0.001
 value: 100
 scale: 100
 shutdown_value: 100
