--- a/jschuh-macros.cfg
+++ b/jschuh-macros.cfg
@@ -76,6 +76,7 @@ variable_start_z_tilt_adjust_at_temp: True
 variable_travel_speed_xy: 12000
 # Z travel speed in (mm/m) for movement macros.
 variable_travel_speed_z: 1200
+variable_homing_sequence: 'xy-z'
 gcode: 
 
 [gcode_macro M106]
