--- a/jschuh-macros.cfg
+++ b/jschuh-macros.cfg
@@ -79,38 +79,62 @@ variable_travel_speed_z: 1200
 variable_homing_sequence: 'xy-z'
 gcode: 
 
-[gcode_macro M106]
-gcode:
-    {% if params.P is defined %}
-      {% if params.S is defined %}
-       {% set activetool = params.P|default(0)|int %} 
-       {% if activetool == 0 %}
-        SET_PIN PIN=part_fan_extruder VALUE={params.S|int}
-       {% else %}
-        SET_PIN PIN=part_fan_extruder{params.P|int} VALUE={params.S|int}
-       {% endif %}
-
-      {% else %}
-       {% if activetool == 0 %}
-        SET_PIN PIN=part_fan_extruder VALUE=255
-       {% else %}
-        SET_PIN PIN=part_fan_extruder{params.P|int} VALUE=255
-       {% endif %} 
-        
-      {% endif %}
-
-    {% else %}
-      {% if params.S is defined %}
-        SET_PIN PIN=part_fan_{printer.toolhead.extruder} VALUE={params.S|int}
-      {% else %}
-        SET_PIN PIN=part_fan_{printer.toolhead.extruder} VALUE=255 
-      {% endif %}
-    {% endif %}
+# [gcode_macro M106]
+# description: Set fan speed for active carriage
+# gcode:
+#     {% set s = params.S|default(255)|int %}
+#     {% set speed = (s / 255.0)|float %}
+#     {% if printer.toolhead.extruder == "extruder" %}
+#         SET_FAN_SPEED FAN=part_fan_extruder SPEED={speed}
+#     {% elif printer.toolhead.extruder == "extruder1" %}
+#         SET_FAN_SPEED FAN=part_fan_extruder1 SPEED={speed}
+#     {% else %}
+#         SET_FAN_SPEED FAN=part_fan_extruder SPEED={speed}
+#         SET_FAN_SPEED FAN=part_fan_extruder1 SPEED={speed}
+#     {% endif %}
+# 
+# [gcode_macro M107]
+# description: Turn off fan for active carriage
+# gcode:
+#     M106 S0
+# 
+#[gcode_macro M106]
+#gcode:
+#    {% if params.P is defined %}
+#      {% if params.S is defined %}
+#       {% set activetool = params.P|default(0)|int %} 
+#       {% if activetool == 0 %}
+#        SET_PIN PIN=part_fan_extruder VALUE={params.S|int}
+#       {% else %}
+#        SET_PIN PIN=part_fan_extruder{params.P|int} VALUE={params.S|int}
+#       {% endif %}
+#
+#      {% else %}
+#       {% if activetool == 0 %}
+#        SET_PIN PIN=part_fan_extruder VALUE=255
+#       {% else %}
+#        SET_PIN PIN=part_fan_extruder{params.P|int} VALUE=255
+#       {% endif %} 
+#        
+#      {% endif %}
+#
+#    {% else %}
+#      {% if params.S is defined %}
+#        SET_PIN PIN=part_fan_{printer.toolhead.extruder} VALUE={params.S|int}
+#      {% else %}
+#        SET_PIN PIN=part_fan_{printer.toolhead.extruder} VALUE=255 
+#      {% endif %}
+#    {% endif %}
  
 [gcode_macro _BEFORE_Z_HOME]
 gcode:
-  T1
-  T0
+  ACTIVATE_EXTRUDER EXTRUDER=extruder1
+  SET_DUAL_CARRIAGE CARRIAGE=1
+  G90
+  G1 X{printer.configfile.config.dual_carriage.position_max|float - 0.3} F12000
+  RESPOND MSG="T1 moved out of the way for Z homing"
+  ACTIVATE_EXTRUDER EXTRUDER=extruder
+  SET_DUAL_CARRIAGE CARRIAGE=0
 
 [idle_timeout]
 gcode:
