--- a/printer.cfg
+++ b/printer.cfg
@@ -46,18 +46,19 @@ home_xy_position: 175, 175
 speed: 50.0
 z_hop: 5
 z_hop_speed: 15.0
-move_to_previous: True
 
 [include fly-d7.cfg]
 [include ebb36-l.cfg]
 [include ebb36-r.cfg]
-[include idex-macros.cfg]
+
+[include tridex.cfg]
+#[include idex-macros.cfg]
 
 [include jschuh-macros.cfg]
 
-[include lcd_menu_settings.cfg]
+# [include lcd_menu_settings.cfg]
 # [include display.nano.cfg]
-[include display.mks.cfg]
+# [include display.mks.cfg]
 
 
 [exclude_object]
@@ -89,12 +90,12 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.008750, -0.048750, -0.058750, -0.083750, -0.073750, -0.028750
-#*# 	  -0.031250, -0.052500, -0.040000, -0.021250, 0.018750, 0.053750
-#*# 	  -0.107500, -0.105000, -0.053750, -0.011250, 0.050000, 0.117500
-#*# 	  -0.152500, -0.122500, -0.046250, 0.021250, 0.107500, 0.188750
-#*# 	  -0.213750, -0.153750, -0.053750, 0.028750, 0.137500, 0.241250
-#*# 	  -0.283750, -0.202500, -0.083750, 0.020000, 0.146250, 0.271250
+#*# 	  0.036250, -0.020000, -0.033750, -0.052500, -0.043750, -0.008750
+#*# 	  -0.008750, -0.015000, 0.010000, 0.036250, 0.083750, 0.117500
+#*# 	  -0.120000, -0.086250, -0.015000, 0.048750, 0.122500, 0.200000
+#*# 	  -0.171250, -0.106250, 0.002500, 0.088750, 0.201250, 0.302500
+#*# 	  -0.256250, -0.151250, -0.015000, 0.102500, 0.245000, 0.371250
+#*# 	  -0.350000, -0.207500, -0.042500, 0.103750, 0.270000, 0.435000
 #*# x_count = 6
 #*# y_count = 6
 #*# mesh_x_pps = 2
@@ -105,3 +106,18 @@ gcode:
 #*# max_x = 320.0
 #*# min_y = 30.0
 #*# max_y = 320.0
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 17.765
+#*# pid_ki = 1.538
+#*# pid_kd = 51.298
+#*#
+#*# [extruder1]
+#*# control = pid
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 58.511
+#*# pid_ki = 1.667
+#*# pid_kd = 513.433
