--- a/ebb36-r.cfg
+++ b/ebb36-r.cfg
@@ -37,12 +37,12 @@ min_temp: 5
 max_temp: 310
 pressure_advance: 0.04
 pressure_advance_smooth_time: 0.02
-control: pid
 max_power: 1.0
 pid_Kp: 20.100
 pid_Ki: 1.595
 pid_Kd: 63.315
 max_extrude_only_distance: 220
+max_extrude_cross_section: 1.3
 
 [tmc2209 extruder1]
 uart_pin: head1:PA15
