IDEX mode macros

--- a/tridex.cfg
+++ b/tridex.cfg
@@ -200,7 +200,80 @@ gcode:
         {% endif %}
         G1 F3000
     {% endif %}
-    
+
+[gcode_macro MODE_DUPLICATION]
+gcode:
+    {% set dcvars = printer["gcode_macro DC_VARS"] %}
+    {% set X = params.X|default(dcvars.bed_x_min + ((dcvars.bed_x_max - dcvars.bed_x_min) / 2.0))|float %}
+    {% set c0_mode = printer.dual_carriage.carriage_0 %}
+    {% set c1_mode = printer.dual_carriage.carriage_1 %}
+    {% if c0_mode != 'PRIMARY' or c1_mode != 'COPY' %}
+        # Park T0
+        SET_DUAL_CARRIAGE CARRIAGE=0 MODE=PRIMARY
+        SET_DUAL_CARRIAGE CARRIAGE=1 MODE=INACTIVE
+        G1 X{printer.configfile.config.stepper_x.position_endstop + 0.5} F{dcvars.movespeed}
+        # Move T1 in place
+        SET_DUAL_CARRIAGE CARRIAGE=1 MODE=PRIMARY
+        SET_DUAL_CARRIAGE Carriage=0 MODE=INACTIVE
+        G1 X{X} F{dcvars.movespeed}
+        # Move T0 to bed edge
+        SET_DUAL_CARRIAGE CARRIAGE=0 MODE=PRIMARY
+        SET_DUAL_CARRIAGE CARRIAGE=1 MODE=INACTIVE
+        G1 X{dcvars.bed_x_min} F{dcvars.movespeed}
+        # Activate Copy Mode
+        SET_DUAL_CARRIAGE CARRIAGE=0 MODE=PRIMARY
+        SET_DUAL_CARRIAGE CARRIAGE=1 MODE=COPY
+        ACTIVATE_EXTRUDER EXTRUDER=extruder
+        SYNC_EXTRUDER_MOTION EXTRUDER=extruder1 MOTION_QUEUE=extruder
+    {% endif %}
+
+[gcode_macro MODE_MIRRORED]
+gcode:
+    {% set dcvars = printer["gcode_macro DC_VARS"] %}
+    {% set X = params.X|default(dcvars.bed_x_max) %}
+    {% set c0_mode = printer.dual_carriage.carriage_0 %}
+    {% set c1_mode = printer.dual_carriage.carriage_1 %}
+    {% if c0_mode != 'PRIMARY' or c1_mode != 'MIRROR' %}
+        # Park T0
+        SET_DUAL_CARRIAGE CARRIAGE=0 MODE=PRIMARY
+        SET_DUAL_CARRIAGE CARRIAGE=1 MODE=INACTIVE
+        G1 X{printer.configfile.config.stepper_x.position_endstop + 0.5} F{dcvars.movespeed}
+        # Move T1 in place
+        SET_DUAL_CARRIAGE CARRIAGE=1 MODE=PRIMARY
+        SET_DUAL_CARRIAGE Carriage=0 MODE=INACTIVE
+        G1 X{X} F{dcvars.movespeed}
+        # Move T0 to bed edge
+        SET_DUAL_CARRIAGE CARRIAGE=0 MODE=PRIMARY
+        SET_DUAL_CARRIAGE CARRIAGE=1 MODE=INACTIVE
+        G1 X{dcvars.bed_x_min} F{dcvars.movespeed}
+        # Activate Copy Mode
+        SET_DUAL_CARRIAGE CARRIAGE=0 MODE=PRIMARY
+        SET_DUAL_CARRIAGE CARRIAGE=1 MODE=MIRROR
+        ACTIVATE_EXTRUDER EXTRUDER=extruder
+        SYNC_EXTRUDER_MOTION EXTRUDER=extruder1 MOTION_QUEUE=extruder
+    {% endif %}
+
+[gcode_macro MODE_FULL_CONTROL]
+gcode: 
+    {% set dcvars = printer["gcode_macro DC_VARS"] %}
+    {% set c0_mode = printer.dual_carriage.carriage_0 %}
+    {% set c1_mode = printer.dual_carriage.carriage_1 %}
+    {% if c0_mode == 'PRIMARY' %}
+        {% if c1_mode != 'INACTIVE' %}
+            SYNC_EXTRUDER_MOTION EXTRUDER=extruder1 MOTION_QUEUE=
+        {% endif %}
+        SET_DUAL_CARRIAGE CARRIAGE=1 MODE=INACTIVE
+    {% elif c1_mode == 'PRIMARY' %}
+        {% if c0_mode != 'INACTIVE' %}
+            SYNC_EXTRUDER_MOTION EXTRUDER=extruder MOTION_QUEUE=
+        {% endif %}
+        SET_DUAL_CARRIAGE CARRIAGE=0 MODE=INACTIVE
+    {% endif %}
+
+
+
+
+
 ## DUAL-CARRIAGES : PRINT FANS MANAGEMENT
 
 [gcode_macro M106]
