--- a/tridex.cfg
+++ b/tridex.cfg
@@ -204,19 +204,20 @@ gcode:
 [gcode_macro MODE_DUPLICATION]
 gcode:
     {% set dcvars = printer["gcode_macro DC_VARS"] %}
+    {% set movespeed = dcvars.movespeed|int * 60 %}
     {% set X = params.X|default(dcvars.bed_x_min + ((dcvars.bed_x_max - dcvars.bed_x_min) / 2.0))|float %}
     {% set c0_mode = printer.dual_carriage.carriage_0 %}
     {% set c1_mode = printer.dual_carriage.carriage_1 %}
     G90
     # Park T0
     SET_DUAL_CARRIAGE CARRIAGE=0
-    G1 X{printer.configfile.config.stepper_x.position_endstop|float + 0.5} F{dcvars.movespeed}
+    G1 X{printer.configfile.config.stepper_x.position_endstop|float + 0.5} F{movespeed}
     # Move T1 in place
     SET_DUAL_CARRIAGE CARRIAGE=1
-    G1 X{X} F{dcvars.movespeed}
+    G1 X{X} F{movespeed}
     # Move T0 to bed edge
     SET_DUAL_CARRIAGE CARRIAGE=0
-    G1 X{dcvars.bed_x_min} F{dcvars.movespeed}
+    G1 X{dcvars.bed_x_min} F{movespeed}
     # Activate Copy Mode
     SET_DUAL_CARRIAGE CARRIAGE=0 MODE=PRIMARY
     SET_DUAL_CARRIAGE CARRIAGE=1 MODE=COPY
@@ -226,19 +227,20 @@ gcode:
 [gcode_macro MODE_MIRRORED]
 gcode:
     {% set dcvars = printer["gcode_macro DC_VARS"] %}
+    {% set movespeed = dcvars.movespeed|int * 60 %}
     {% set X = params.X|default(dcvars.bed_x_max) %}
     {% set c0_mode = printer.dual_carriage.carriage_0 %}
     {% set c1_mode = printer.dual_carriage.carriage_1 %}
     G90
     # Park T0
     SET_DUAL_CARRIAGE CARRIAGE=0
-    G1 X{printer.configfile.config.stepper_x.position_endstop|float + 0.5} F{dcvars.movespeed}
+    G1 X{printer.configfile.config.stepper_x.position_endstop|float + 0.5} F{movespeed}
     # Move T1 in place
     SET_DUAL_CARRIAGE CARRIAGE=1 
-    G1 X{X} F{dcvars.movespeed}
+    G1 X{X} F{movespeed}
     # Move T0 to bed edge
     SET_DUAL_CARRIAGE CARRIAGE=0 
-    G1 X{dcvars.bed_x_min} F{dcvars.movespeed}
+    G1 X{dcvars.bed_x_min} F{movespeed}
     # Activate Copy Mode
     SET_DUAL_CARRIAGE CARRIAGE=0 MODE=PRIMARY
     SET_DUAL_CARRIAGE CARRIAGE=1 MODE=MIRROR
