--- a/printer.cfg
+++ b/printer.cfg
@@ -56,9 +56,9 @@ z_hop_speed: 15.0
 
 [include jschuh-macros.cfg]
 
-# [include lcd_menu_settings.cfg]
+[include lcd_menu_settings.cfg]
 # [include display.nano.cfg]
-# [include display.mks.cfg]
+[include display.mks.cfg]
 
 
 [exclude_object]
@@ -90,12 +90,12 @@ gcode:
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.036250, -0.020000, -0.033750, -0.052500, -0.043750, -0.008750
-#*# 	  -0.008750, -0.015000, 0.010000, 0.036250, 0.083750, 0.117500
-#*# 	  -0.120000, -0.086250, -0.015000, 0.048750, 0.122500, 0.200000
-#*# 	  -0.171250, -0.106250, 0.002500, 0.088750, 0.201250, 0.302500
-#*# 	  -0.256250, -0.151250, -0.015000, 0.102500, 0.245000, 0.371250
-#*# 	  -0.350000, -0.207500, -0.042500, 0.103750, 0.270000, 0.435000
+#*# 	0.036250, -0.020000, -0.033750, -0.052500, -0.043750, -0.008750
+#*# 	-0.008750, -0.015000, 0.010000, 0.036250, 0.083750, 0.117500
+#*# 	-0.120000, -0.086250, -0.015000, 0.048750, 0.122500, 0.200000
+#*# 	-0.171250, -0.106250, 0.002500, 0.088750, 0.201250, 0.302500
+#*# 	-0.256250, -0.151250, -0.015000, 0.102500, 0.245000, 0.371250
+#*# 	-0.350000, -0.207500, -0.042500, 0.103750, 0.270000, 0.435000
 #*# x_count = 6
 #*# y_count = 6
 #*# mesh_x_pps = 2
@@ -121,3 +121,9 @@ gcode:
 #*# pid_kp = 58.511
 #*# pid_ki = 1.667
 #*# pid_kd = 513.433
+#*#
+#*# [input_shaper]
+#*# shaper_type_x = 2hump_ei
+#*# shaper_freq_x = 86.6
+#*# shaper_type_y = 2hump_ei
+#*# shaper_freq_y = 81.6
